Updated banana to v1.6.26

--- a/corrd/opioid-research/dashboard/app/panels/sunburst/module.html
+++ b/corrd/opioid-research/dashboard/app/panels/sunburst/module.html
@@ -1,3 +1,4 @@
-<div id="sunburst" ng-controller="sunburst" ng-init="init()">
-    <sunburst style="position:relative"></sunburst>
+<div ng-controller="sunburst" ng-init="init()"
+     style="min-height:{{panel.height || row.height}}">
+  <sunburst style="position:relative"></sunburst>
 </div>
